src/objects/Submitted_Info__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>Submitting Contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Submitted Info</relationshipLabel>
        <relationshipName>R00NR0000000UcncMAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_City__c</fullName>
        <inlineHelpText>Home City</inlineHelpText>
        <label>Home City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Country__c</fullName>
        <inlineHelpText>Home Country</inlineHelpText>
        <label>Home Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_PostalCode__c</fullName>
        <inlineHelpText>Home Zip/Postal Code</inlineHelpText>
        <label>Home PostalCode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_State__c</fullName>
        <inlineHelpText>Home Province</inlineHelpText>
        <label>Home State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Street__c</fullName>
        <inlineHelpText>Home street address</inlineHelpText>
        <label>Home Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>Where this submitted data is in the process</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_City__c</fullName>
        <inlineHelpText>Work City</inlineHelpText>
        <label>Work City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Country__c</fullName>
        <inlineHelpText>Work Country</inlineHelpText>
        <label>Work Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_PostalCode__c</fullName>
        <inlineHelpText>Work Zip/Postal Code</inlineHelpText>
        <label>Work PostalCode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_State__c</fullName>
        <inlineHelpText>Work Province</inlineHelpText>
        <label>Work State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Street__c</fullName>
        <inlineHelpText>Work street address</inlineHelpText>
        <label>Work Street</label>
        <type>TextArea</type>
    </fields>
    <label>Submitted Info</label>
    <listViews>
        <fullName>All_Submitted_Info</fullName>
        <columns>Stage__c</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Organization__c</columns>
        <columns>Work_Street__c</columns>
        <columns>Work_City__c</columns>
        <columns>Work_State__c</columns>
        <columns>Work_PostalCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Submitted Info</label>
    </listViews>
    <nameField>
        <displayFormat>submit-{0000000}</displayFormat>
        <label>Submitted Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submitted Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>